src/coolcmp/unit_tests/Custom/type_checker/success/self1.cl
class Main {
    main() : Int { 1 };
};

class C inherits Main {
    obj : Main <- new SELF_TYPE;
};
