src/coolcmp/unit_tests/Custom/type_checker/fail/case2.cl
class Main inherits IO {
    main(): String {
        case "asd" of
            str : SELF_TYPE => out_string(str);
            bruh : Object => out_string("is object");
        esac
    };
};